--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ $ git ls-files | xargs wc -l > symfony.wc
     <script type="text/javascript" src="javascripts/d3/d3.layout.js"></script>
     <script type="text/javascript" src="javascripts/CodeFlower.js"></script>
     <script type="text/javascript" src="javascripts/dataConverter.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script type="text/javascript">
       var currentCodeFlower;
       var createCodeFlower = function(json) {
